<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.61"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_app_gamesex" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"

            android:theme="@style/ThemeOverlay.MyTitleText" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="22dp"/>

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="22dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:id="@+id/edit_ConfirmPassword"
            android:layout_weight="1"
            android:textSize="22dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_password_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_password_fields"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Voltar"
                android:id="@+id/btn_cancelar"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>




</LinearLayout>